<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_step"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     tools:context="piso.android.bakingapp.StepActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="\lt \lt  Previous"
            android:textAllCaps="false"
            android:id="@+id/bt_previous"
            android:background="@drawable/custom_button"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Next  >>"
            android:textAllCaps="false"
            android:id="@+id/bt_next"
            android:background="@drawable/custom_button"

            />
    </LinearLayout>

</RelativeLayout>
